--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="sound-column">
                 <button id="sound1" class="red-button">Pitch</button>
                 <button id="sound2" class="sound-button">Hello</button>
-                <button id="sound3" class="sound-button">Greeting</button>
-                <button id="sound4" class="sound-button">Cindy Johnson</button>
+                <button id="sound3" class="sound-button">Greeting Selvy Wells</button>
+                <button id="sound4" class="sound-button">-</button>
                 <button id="sound5" class="sound-button">-</button>
-                <button id="sound6" class="sound-button">Voice</button>
-                <button id="sound7" class="sound-button">Age 2</button>
-                <button id="sound8" class="sound-button">50 to 80</button>
+                <button id="sound6" class="sound-button">-</button>
+                <button id="sound7" class="sound-button">-</button>
+                <button id="sound8" class="sound-button">-</button>
                 <button id="sound9" class="sound-button">-</button>
                 <button id="sound10" class="sound-button">-</button>
                 <button id="sound11" class="sound-button">-</button>
@@ -30,28 +30,28 @@
                 <button id="sound13" class="sound-button">-</button>
                 <button id="sound14" class="sound-button">-</button>
                 <button id="sound15" class="sound-button">-</button>
-                <button id="sound16" class="sound-button">Jain Greetings</button>
+                <button id="sound16" class="sound-button">-</button>
                 <!-- Add more buttons here -->
             </div>
 
             <!-- Column 2 -->
             <div class="sound-column">
                 <button id="sound20" class="red-button">Fillers</button>
-                <button id="sound21" class="sound-button">Wait a Mint</button>
-                <button id="sound22" class="sound-button">Why r u Running</button>
-                <button id="sound23" class="sound-button">What the Fu*k</button>
-                <button id="sound24" class="sound-button">Crying</button>
-                <button id="sound25" class="sound-button">Ok Let's Go</button>
-                <button id="sound26" class="sound-button">Get Away</button>
-                <button id="sound27" class="sound-button">Why are you GAY</button>
-                <button id="sound28" class="sound-button">Get outta here</button>
+                <button id="sound21" class="sound-button">Agent Name Selvy</button>
+                <button id="sound22" class="sound-button">-</button>
+                <button id="sound23" class="sound-button">-</button>
+                <button id="sound24" class="sound-button">-</button>
+                <button id="sound25" class="sound-button">-</button>
+                <button id="sound26" class="sound-button">-</button>
+                <button id="sound27" class="sound-button">-</button>
+                <button id="sound28" class="sound-button">-</button>
                 <button id="sound29" class="sound-button">-</button>
                 <button id="sound30" class="sound-button">-</button>
                 <button id="sound31" class="sound-button">-</button>
                 <button id="sound32" class="sound-button">-</button>
                 <button id="sound33" class="sound-button">-</button>
                 <button id="sound34" class="sound-button">-</button>
-                <button id="sound35" class="sound-button">Agent Jain</button>
+                <button id="sound35" class="sound-button">-</button>
                 <!-- Add more buttons here -->
             </div>
 
