--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="sound-column">
                 <button id="sound1" class="red-button">Pitch</button>
                 <button id="sound2" class="sound-button">Hello</button>
-                <button id="sound3" class="sound-button">Greeting Selvy Wells</button>
-                <button id="sound4" class="sound-button">-</button>
-                <button id="sound5" class="sound-button">-</button>
+                <button id="sound3" class="sound-button">Greeting Sylvie</button>
+                <button id="sound4" class="sound-button">Call Back</button>
+                <button id="sound5" class="sound-button"></button>
                 <button id="sound6" class="sound-button">-</button>
                 <button id="sound7" class="sound-button">-</button>
-                <button id="sound8" class="sound-button">-</button>
+                <button id="sound8" class="sound-button"></button>
                 <button id="sound9" class="sound-button">-</button>
                 <button id="sound10" class="sound-button">-</button>
                 <button id="sound11" class="sound-button">-</button>
@@ -36,17 +36,17 @@
 
             <!-- Column 2 -->
             <div class="sound-column">
-                <button id="sound20" class="red-button">Fillers</button>
-                <button id="sound21" class="sound-button">Agent Name Selvy</button>
-                <button id="sound22" class="sound-button">-</button>
+                <button id="sound20" class="red-button">Extra</button>
+                <button id="sound21" class="sound-button">-</button>
+                <button id="sound22" class="sound-button">AGent Name Selvy</button>
                 <button id="sound23" class="sound-button">-</button>
-                <button id="sound24" class="sound-button">-</button>
-                <button id="sound25" class="sound-button">-</button>
-                <button id="sound26" class="sound-button">-</button>
-                <button id="sound27" class="sound-button">-</button>
+                <button id="sound24" class="sound-button">State</button>
+                <button id="sound25" class="sound-button">Give me Moment</button>
+                <button id="sound26" class="sound-button">Alright</button>
+                <button id="sound27" class="sound-button">That's Ok</button>
                 <button id="sound28" class="sound-button">-</button>
                 <button id="sound29" class="sound-button">-</button>
-                <button id="sound30" class="sound-button">-</button>
+                <button id="sound30" class="sound-button">Got Info</button>
                 <button id="sound31" class="sound-button">-</button>
                 <button id="sound32" class="sound-button">-</button>
                 <button id="sound33" class="sound-button">-</button>
@@ -66,11 +66,11 @@
     <!-- Add audio elements with src attributes for each sound button -->
 
                 <!-- Start of Column 1 -->
-    <audio id="audio2" src=".wav"></audio>
-    <audio id="audio3" src=".mp3"></audio>
-    <audio id="audio4" src=".mp31"></audio>
+    <audio id="audio2" src=".mp3"></audio>
+    <audio id="audio3" src="Sylvie Greetings.mp3"></audio>
+    <audio id="audio4" src="Sylvie Call back.mp3"></audio>
     <audio id="audio5" src=".mp3"></audio>
-    <audio id="audio6" src=".mp31"></audio>
+    <audio id="audio6" src=".mp3"></audio>
     <audio id="audio7" src=".mp3"></audio>
     <audio id="audio8" src=".mp3"></audio>
     <audio id="audio9" src=".mp3"></audio>
@@ -85,15 +85,15 @@
 
                 <!-- Start of Column 2 -->
     <audio id="audio21" src=".mp3"></audio>
-    <audio id="audio22" src=".mp3"></audio>
+    <audio id="audio22" src="Sylvie Wills.mp3"></audio>
     <audio id="audio23" src=".mp3"></audio>
-    <audio id="audio24" src=".mp3"></audio>
-    <audio id="audio25" src=".mp3"></audio>
-    <audio id="audio26" src=".mp3"></audio>
-    <audio id="audio27" src=".mp3"></audio>
+    <audio id="audio24" src="State.mp3"></audio>
+    <audio id="audio25" src="Give me a moment.mp3"></audio>
+    <audio id="audio26" src="Alright.mp3"></audio>
+    <audio id="audio27" src="Thats okay.mp3"></audio>
     <audio id="audio28" src=".mp3"></audio>
     <audio id="audio29" src=".mp3"></audio>
-    <audio id="audio30" src=".mp3"></audio>
+    <audio id="audio30" src="Got Information.mp3"></audio>
     <audio id="audio31" src=".mp3"></audio>
     <audio id="audio32" src=".mp3"></audio>
     <audio id="audio33" src=".mp3"></audio>
