--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <div class="sound-column">
                 <button id="sound1" class="red-button">Pitch</button>
                 <button id="sound2" class="sound-button">Hello</button>
-                <button id="sound3" class="sound-button">Greeting Sylvie</button>
-                <button id="sound4" class="sound-button">Call Back</button>
-                <button id="sound5" class="sound-button">Emily Call Back</button>
-                <button id="sound6" class="sound-button">-</button>
-                <button id="sound7" class="sound-button">-</button>
-                <button id="sound8" class="sound-button"></button>
-                <button id="sound9" class="sound-button">-</button>
+                <button id="sound3" class="sound-button">Hello 1</button>
+                <button id="sound4" class="sound-button">Greeting Hina Walker</button>
+                <button id="sound5" class="sound-button">Pitch 1</button>
+                <button id="sound6" class="sound-button">Greeting Sylvie</button>
+                <button id="sound7" class="sound-button">Call Back</button>
+                <button id="sound8" class="sound-button">Emily Call Back</button>
+                <button id="sound9" class="sound-button">How old r u</button>
                 <button id="sound10" class="sound-button">-</button>
                 <button id="sound11" class="sound-button">-</button>
                 <button id="sound12" class="sound-button">-</button>
-                <button id="sound13" class="sound-button">-</button>
+                <button id="sound13" class="sound-button">Do u Smoke</button>
                 <button id="sound14" class="sound-button">-</button>
-                <button id="sound15" class="sound-button">-</button>
+                <button id="sound15" class="sound-button">Transfer 1</button>
                 <button id="sound16" class="sound-button">-</button>
                 <!-- Add more buttons here -->
             </div>
@@ -37,20 +37,20 @@
             <!-- Column 2 -->
             <div class="sound-column">
                 <button id="sound20" class="red-button">Extra</button>
-                <button id="sound21" class="sound-button">-</button>
-                <button id="sound22" class="sound-button">Agent Name Selvy</button>
-                <button id="sound23" class="sound-button">-</button>
-                <button id="sound24" class="sound-button">State</button>
-                <button id="sound25" class="sound-button">Give me Moment</button>
-                <button id="sound26" class="sound-button">Alright</button>
-                <button id="sound27" class="sound-button">That's Ok</button>
-                <button id="sound28" class="sound-button">-</button>
-                <button id="sound29" class="sound-button">-</button>
-                <button id="sound30" class="sound-button">Got Info</button>
+                <button id="sound21" class="sound-button">Agent Name Selvy</button>
+                <button id="sound22" class="sound-button">State</button>
+                <button id="sound23" class="sound-button">Got Info</button>
+                <button id="sound24" class="sound-button">Can I say sth</button>
+                <button id="sound25" class="sound-button">Not Interested</button>
+                <button id="sound26" class="sound-button">Already Hve Plan</button>
+                <button id="sound27" class="sound-button">Okay</button>
+                <button id="sound28" class="sound-button">That's Ok</button>
+                <button id="sound29" class="sound-button">Alright</button>
+                <button id="sound30" class="sound-button"></button>
                 <button id="sound31" class="sound-button">-</button>
                 <button id="sound32" class="sound-button">-</button>
                 <button id="sound33" class="sound-button">-</button>
-                <button id="sound34" class="sound-button">-</button>
+                <button id="sound34" class="sound-button">Give me Moment</button>
                 <button id="sound35" class="sound-button">-</button>
                 <!-- Add more buttons here -->
             </div>
@@ -67,37 +67,37 @@
 
                 <!-- Start of Column 1 -->
     <audio id="audio2" src="Hello.mp3"></audio>
-    <audio id="audio3" src="Sylvie Greetings.mp3"></audio>
-    <audio id="audio4" src="Sylvie Call back.mp3"></audio>
-    <audio id="audio5" src="Emily.mp3"></audio>
-    <audio id="audio6" src=".mp3"></audio>
-    <audio id="audio7" src=".mp3"></audio>
-    <audio id="audio8" src=".mp3"></audio>
-    <audio id="audio9" src=".mp3"></audio>
+    <audio id="audio3" src="HELLO 1.mp3"></audio>
+    <audio id="audio4" src="GREETING 1.mp3"></audio>
+    <audio id="audio5" src="PITCH1 1.wav"></audio>
+    <audio id="audio6" src="Sylvie Greetings.mp3"></audio>
+    <audio id="audio7" src="Sylvie Call back.mp3"></audio>
+    <audio id="audio8" src="Emily.mp3"></audio>
+    <audio id="audio9" src="old are you 1.mp3"></audio>
     <audio id="audio10" src=".mp3"></audio>
     <audio id="audio11" src=".mp3"></audio>
     <audio id="audio12" src=".mp3"></audio>
-    <audio id="audio13" src=".mp3"></audio>
+    <audio id="audio13" src="SMOKER 1.wav3"></audio>
     <audio id="audio14" src=".mp3"></audio>
-    <audio id="audio15" src=".mp3"></audio>
+    <audio id="audio15" src="Transfer1 1.wav"></audio>
     <audio id="audio16" src=".mp3"></audio>
                 <!-- End of Column 1 -->
 
                 <!-- Start of Column 2 -->
-    <audio id="audio21" src=".mp3"></audio>
-    <audio id="audio22" src="Sylvie Wills.mp3"></audio>
-    <audio id="audio23" src=".mp3"></audio>
-    <audio id="audio24" src="State.mp3"></audio>
-    <audio id="audio25" src="Give me a moment.mp3"></audio>
-    <audio id="audio26" src="Alright.mp3"></audio>
-    <audio id="audio27" src="Thats okay.mp3"></audio>
-    <audio id="audio28" src=".mp3"></audio>
-    <audio id="audio29" src=".mp3"></audio>
-    <audio id="audio30" src="Got Information.mp3"></audio>
+    <audio id="audio21" src="Sylvie Wills.mp3"></audio>
+    <audio id="audio22" src="State.mp3"></audio>
+    <audio id="audio23" src="Got Information.mp3"></audio>
+    <audio id="audio24" src="can i say 1.mp3"></audio>
+    <audio id="audio25" src="NOT INTERESTED1 1.mp3"></audio>
+    <audio id="audio26" src="alreadhaveplan 1.wav"></audio>
+    <audio id="audio27" src="okkk 1.mp3"></audio>
+    <audio id="audio28" src="Thats okay.mp3"></audio>
+    <audio id="audio29" src="Alright.mp3"></audio>
+    <audio id="audio30" src=".mp3"></audio>
     <audio id="audio31" src=".mp3"></audio>
     <audio id="audio32" src=".mp3"></audio>
     <audio id="audio33" src=".mp3"></audio>
-    <audio id="audio34" src=".mp3"></audio>
+    <audio id="audio34" src="Give me a moment.mp3"></audio>
     <audio id="audio35" src=".mp3"></audio>
                 <!-- End of Column 2 -->
                     
