--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button id="sound1" class="red-button">Pitch</button>
                 <button id="sound2" class="sound-button">Hello</button>
                 <button id="sound3" class="sound-button">Hello 1</button>
-                <button id="sound4" class="sound-button">Greeting Hina Walker</button>
+                <button id="sound4" class="sound-button">Greeting Hina</button>
                 <button id="sound5" class="sound-button">Pitch 1</button>
                 <button id="sound6" class="sound-button">Greeting Sylvie</button>
                 <button id="sound7" class="sound-button">Call Back</button>
