--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <button id="sound8" class="sound-button">Emily Call Back</button>
                 <button id="sound9" class="sound-button">How old r u</button>
                 <button id="sound10" class="sound-button">-</button>
-                <button id="sound11" class="sound-button">-</button>
+                <button id="sound11" class="sound-button">Do u Smoke</button>
                 <button id="sound12" class="sound-button">-</button>
-                <button id="sound13" class="sound-button">Do u Smoke</button>
+                <button id="sound13" class="sound-button"></button>
                 <button id="sound14" class="sound-button">-</button>
                 <button id="sound15" class="sound-button">Transfer 1</button>
                 <button id="sound16" class="sound-button">-</button>
@@ -75,9 +75,9 @@
     <audio id="audio8" src="Emily.mp3"></audio>
     <audio id="audio9" src="old are you 1.mp3"></audio>
     <audio id="audio10" src=".mp3"></audio>
-    <audio id="audio11" src=".mp3"></audio>
+    <audio id="audio11" src="SMOKER 1.wav"></audio>
     <audio id="audio12" src=".mp3"></audio>
-    <audio id="audio13" src="SMOKER 1.wav3"></audio>
+    <audio id="audio13" src=".mp3"></audio>
     <audio id="audio14" src=".mp3"></audio>
     <audio id="audio15" src="Transfer1 1.wav"></audio>
     <audio id="audio16" src=".mp3"></audio>
