--- a/index.html
+++ b/index.html
@@ -17,41 +17,45 @@
             <div class="sound-column">
                 <button id="sound1" class="red-button">Pitch</button>
                 <button id="sound2" class="sound-button">Hello</button>
-                <button id="sound3" class="sound-button">Hello 1</button>
-                <button id="sound4" class="sound-button">Greeting Hina</button>
-                <button id="sound5" class="sound-button">Call Back</button>
+                <button id="sound3" class="sound-button">Greeting Hina</button>
+                <button id="sound4" class="sound-button">Call Back</button>
+                <button id="sound5" class="sound-button">Emily Call Back</button>
                 <button id="sound6" class="sound-button">Pitch 1</button>
-                <button id="sound7" class="sound-button">Greeting Sylvie</button>
-                <button id="sound8" class="sound-button">Call Back</button>
-                <button id="sound9" class="sound-button">Emily Call Back</button>
-                <button id="sound10" class="sound-button">How old r u</button>
-                <button id="sound11" class="sound-button"></button>
-                <button id="sound12" class="sound-button">Health</button>
-                <button id="sound13" class="sound-button">Do u Smoke</button>
-                <button id="sound14" class="sound-button">-</button>
-                <button id="sound15" class="sound-button">Transfer 1</button>
-                <button id="sound16" class="sound-button">-</button>
+                <button id="sound7" class="sound-button">50 to 80</button>
+                <button id="sound8" class="sound-button">How old r u</button>
+                <button id="sound9" class="sound-button">Health</button>
+                <button id="sound10" class="sound-button">Smoker</button>
+                <button id="sound11" class="sound-button">Glad to hear</button>
+                <button id="sound12" class="sound-button">No Problem</button>
+                <button id="sound13" class="sound-button">Is That ok</button>
+                <button id="sound14" class="sound-button">Beneficiary</button>
+                <button id="sound15" class="sound-button">Yes</button>
+                <button id="sound16" class="sound-button">Discount</button>
+                <button id="sound17" class="sound-button">Transfer 1</button>
+                <button id="sound18" class="sound-button">Transfer 2</button>
                 <!-- Add more buttons here -->
             </div>
 
             <!-- Column 2 -->
             <div class="sound-column">
                 <button id="sound20" class="red-button">Extra</button>
-                <button id="sound21" class="sound-button">Agent Name Selvy</button>
-                <button id="sound22" class="sound-button">State</button>
-                <button id="sound23" class="sound-button">Got Info</button>
-                <button id="sound24" class="sound-button">Can I say sth</button>
-                <button id="sound25" class="sound-button">Not Interested</button>
-                <button id="sound26" class="sound-button">Already Hve Plan</button>
-                <button id="sound27" class="sound-button">Okay</button>
-                <button id="sound28" class="sound-button">That's Ok</button>
-                <button id="sound29" class="sound-button">Alright</button>
-                <button id="sound30" class="sound-button"></button>
-                <button id="sound31" class="sound-button">-</button>
-                <button id="sound32" class="sound-button">-</button>
-                <button id="sound33" class="sound-button">-</button>
-                <button id="sound34" class="sound-button">Give me Moment</button>
-                <button id="sound35" class="sound-button">Weather</button>
+                <button id="sound21" class="sound-button">Location</button>
+                <button id="sound22" class="sound-button">Company Name</button>
+                <button id="sound23" class="sound-button">Not Interested</button>
+                <button id="sound24" class="sound-button">Not Interested 2</button>
+                <button id="sound25" class="sound-button">Already Hve Plan</button>
+                <button id="sound26" class="sound-button">Can I say sth</button>
+                <button id="sound27" class="sound-button">Thnx for asking</button>
+                <button id="sound28" class="sound-button">Okay</button>
+                <button id="sound29" class="sound-button">Great</button>
+                <button id="sound30" class="sound-button">State</button>
+                <button id="sound31" class="sound-button">Email</button>
+                <button id="sound32" class="sound-button">Called Before</button>
+                <button id="sound33" class="sound-button">Real Person</button>
+                <button id="sound34" class="sound-button">Laugh</button>
+                <button id="sound35" class="sound-button">I agree</button>
+                <button id="sound36" class="sound-button">Weather</button>
+                <button id="sound37" class="sound-button">Hold for me</button>
                 <!-- Add more buttons here -->
             </div>
 
@@ -66,14 +70,14 @@
     <!-- Add audio elements with src attributes for each sound button -->
 
                 <!-- Start of Column 1 -->
-    <audio id="audio2" src="Hello.mp3"></audio>
-    <audio id="audio3" src="HELLO 1.mp3"></audio>
-    <audio id="audio4" src="GREETING 1.mp3"></audio>
-    <audio id="audio5" src="hina walker call back.wav"></audio>
+    <audio id="audio2" src="HELLO 1.mp3"></audio>
+    <audio id="audio3" src="GREETING 1.mp3"></audio>
+    <audio id="audio4" src=""></audio>
+    <audio id="audio5" src="Emily.mp3"></audio>
     <audio id="audio6" src="PITCH1 1.wav"></audio>
     <audio id="audio7" src="Sylvie Greetings.mp3"></audio>
     <audio id="audio8" src="Sylvie Call back.mp3"></audio>
-    <audio id="audio9" src="Emily.mp3"></audio>
+    <audio id="audio9" src=""></audio>
     <audio id="audio10" src="old are you 1.mp3"></audio>
     <audio id="audio11" src=""></audio>
     <audio id="audio12" src="Health1.mp3"></audio>
@@ -81,6 +85,8 @@
     <audio id="audio14" src=".mp3"></audio>
     <audio id="audio15" src="Transfer1 1.wav"></audio>
     <audio id="audio16" src=".mp3"></audio>
+    <audio id="audio17" src=".mp3"></audio>
+    <audio id="audio18" src=".mp3"></audio>
                 <!-- End of Column 1 -->
 
                 <!-- Start of Column 2 -->
@@ -99,6 +105,8 @@
     <audio id="audio33" src=".mp3"></audio>
     <audio id="audio34" src="Give me a moment.mp3"></audio>
     <audio id="audio35" src="Weather2.mp3"></audio>
+    <audio id="audio36" src=".mp3"></audio>
+    <audio id="audio37" src=".mp3"></audio>
                 <!-- End of Column 2 -->
                     
     <!-- Add more audio elements for other buttons -->
