--- a/index.html
+++ b/index.html
@@ -72,41 +72,41 @@
                 <!-- Start of Column 1 -->
     <audio id="audio2" src="HELLO 1.mp3"></audio>
     <audio id="audio3" src="GREETING 1.mp3"></audio>
-    <audio id="audio4" src=""></audio>
+    <audio id="audio4" src="hina walker call back 2.wav"></audio>
     <audio id="audio5" src="Emily.mp3"></audio>
-    <audio id="audio6" src="PITCH1 1.wav"></audio>
-    <audio id="audio7" src="Sylvie Greetings.mp3"></audio>
-    <audio id="audio8" src="Sylvie Call back.mp3"></audio>
-    <audio id="audio9" src=""></audio>
-    <audio id="audio10" src="old are you 1.mp3"></audio>
-    <audio id="audio11" src=""></audio>
-    <audio id="audio12" src="Health1.mp3"></audio>
-    <audio id="audio13" src="SMOKER 1.wav"></audio>
-    <audio id="audio14" src=".mp3"></audio>
-    <audio id="audio15" src="Transfer1 1.wav"></audio>
-    <audio id="audio16" src=".mp3"></audio>
-    <audio id="audio17" src=".mp3"></audio>
-    <audio id="audio18" src=".mp3"></audio>
+    <audio id="audio6" src="Pitch 1 2.wav"></audio>
+    <audio id="audio7" src="50 to 80 2.mp3"></audio>
+    <audio id="audio8" src="How old are you 2.mp3"></audio>
+    <audio id="audio9" src="health 2.mp3"></audio>
+    <audio id="audio10" src="Smoker 2.wav"></audio>
+    <audio id="audio11" src="Glad To Hear That 2.wav"></audio>
+    <audio id="audio12" src="No Problem 2.wav"></audio>
+    <audio id="audio13" src="Is that ok 2.mp3"></audio>
+    <audio id="audio14" src="Benficery 2.wav"></audio>
+    <audio id="audio15" src="Yes 2.wav"></audio>
+    <audio id="audio16" src="Discount 2.wav"></audio>
+    <audio id="audio17" src="Trx Detail 1 2.wav"></audio>
+    <audio id="audio18" src="transfer2 2.wav"></audio>
                 <!-- End of Column 1 -->
 
                 <!-- Start of Column 2 -->
-    <audio id="audio21" src="Sylvie Wills.mp3"></audio>
-    <audio id="audio22" src="State.mp3"></audio>
-    <audio id="audio23" src="Got Information.mp3"></audio>
-    <audio id="audio24" src="can i say 1.mp3"></audio>
-    <audio id="audio25" src="NOT INTERESTED1 1.mp3"></audio>
-    <audio id="audio26" src="alreadhaveplan 1.wav"></audio>
-    <audio id="audio27" src="okkk 1.mp3"></audio>
-    <audio id="audio28" src="Thats okay.mp3"></audio>
-    <audio id="audio29" src="Alright.mp3"></audio>
-    <audio id="audio30" src=".mp3"></audio>
-    <audio id="audio31" src=".mp3"></audio>
-    <audio id="audio32" src=".mp3"></audio>
-    <audio id="audio33" src=".mp3"></audio>
-    <audio id="audio34" src="Give me a moment.mp3"></audio>
+    <audio id="audio21" src="Location 2.wav"></audio>
+    <audio id="audio22" src="Company Name 2.wav"></audio>
+    <audio id="audio23" src="Not Interested 1 2.wav"></audio>
+    <audio id="audio24" src="Not Interested 2 2.wav"></audio>
+    <audio id="audio25" src="Already Have Plan 2.wav"></audio>
+    <audio id="audio26" src="Can I say Sth 2.mp3"></audio>
+    <audio id="audio27" src="Thanks for asking 2.wav"></audio>
+    <audio id="audio28" src="Ok 2.mp3"></audio>
+    <audio id="audio29" src="Great 2.wav"></audio>
+    <audio id="audio30" src="State.mp3"></audio>
+    <audio id="audio31" src="Email 2.wav"></audio>
+    <audio id="audio32" src="called before 2.mp3"></audio>
+    <audio id="audio33" src="Real Person 2.wav"></audio>
+    <audio id="audio34" src="Laugh 2.wav"></audio>
     <audio id="audio35" src="Weather2.mp3"></audio>
-    <audio id="audio36" src=".mp3"></audio>
-    <audio id="audio37" src=".mp3"></audio>
+    <audio id="audio36" src="Weather 2.wav"></audio>
+    <audio id="audio37" src="Hold on for me 2.wav"></audio>
                 <!-- End of Column 2 -->
                     
     <!-- Add more audio elements for other buttons -->
